--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -46,8 +46,8 @@ Use the global `--debug` flag to print detailed debug output.
 ### Get started
 
 - `cargo install cargo-shuttle`: For more alternatives, see [Installation](/getting-started/installation).
-- `shuttle login`: Open the Shuttle Console and paste the API key to log in.
-- `shuttle init`: Log in and initialize a project.
+- `shuttle login`: Log in via the Shuttle Console.
+- `shuttle init`: Generate a project from a template.
 - `shuttle account`: Check account details.
 
 ### Local run
@@ -80,6 +80,7 @@ All project-related commands can use:
 - `shuttle project status`: Check the state of this project.
 - `shuttle project link`: Link this project folder to a project on Shuttle.
 - `shuttle project delete`: Delete a project.
+- `shuttle project update name <new-name>`: Rename a project.
 
 ### Manage deployments and logs
 
