fix: broken external links

--- a/docs/local-run.mdx
+++ b/docs/local-run.mdx
@@ -108,7 +108,7 @@ if cfg!(debug_assertions) {
 
 ### Docker engines
 
-`cargo-shuttle` uses the [bollard](https://crates.io/crates/bollard) crate to interact with the Docker engine on local runs.
+`cargo-shuttle` uses the [bollard](https://docs.rs/bollard/latest/bollard/index.html) crate to interact with the Docker engine on local runs.
 
 If you are using a non-standard Docker engine, you might get this error:
 
