--- a/templates/fullstack/saas-template.mdx
+++ b/templates/fullstack/saas-template.mdx
@@ -42,7 +42,7 @@ users will be able to view their customers, sales records as well as some analyt
 - **Using `dev` for Development:**
     - Run `npm run dev` to start your application with live reload capabilities. This script uses `turbowatch` to
       monitor changes in both the frontend and backend.
-    - Visit [http://localhost:8000](http://localhost:8000) once the app has built.
+    - Visit `http://localhost:8000` once the app has built.
     - If you prefer using `cargo-watch` instead of `turbowatch`, the watch feature can be disabled in
       the `turbowatch.ts` file.
 - **Frontend-Focused Development with `next-dev`:**
