--- a/templates/tutorials/serverless-calendar-app.mdx
+++ b/templates/tutorials/serverless-calendar-app.mdx
@@ -141,7 +141,7 @@ and finally:
 shuttle deploy
 ```
 
-Now let's head over to https://zerocal.shuttle.app:
+Now let's head over to `https://zerocal.shuttle.app`:
 
 Hello World! Deploying the first version took less than 5 minutes. Nice! We're
 all set for our custom calendar app.
