--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -5,8 +5,8 @@ description: "Learn how you can secure your Rocket web application by using JWT 
 
 ## Description
 
-This example shows how to use [Rocket request guards](https://rocket.rs/v0.5-rc/guide/requests/#request-guards) for authentication with [JSON Web Tokens](https://jwt.io/) (JWT for short).
-The idea is that all requests authenticate first at https://authentication-rocket-app.shuttle.app/login to get a JWT.
+This example shows how to use [Rocket request guards](https://rocket.rs/guide/v0.5/requests/#request-guards) for authentication with [JSON Web Tokens](https://jwt.io/) (JWT for short).
+The idea is that all requests authenticate first at the `/login` route on a given web service to get a JWT.
 Then the JWT is sent with all requests requiring authentication using the HTTP header `Authorization: Bearer <token>`.
 
 This example uses the [`jsonwebtoken`](https://github.com/Keats/jsonwebtoken) which supports symmetric and asymmetric secret encoding, built-in validations, and most JWT algorithms.
@@ -76,7 +76,7 @@ struct PrivateResponse {
 }
 
 // More details on Rocket request guards can be found here
-// https://rocket.rs/v0.5-rc/guide/requests/#request-guards
+// https://rocket.rs/guide/v0.5/requests/#request-guards
 #[get("/private")]
 fn private(user: Claims) -> Json<PrivateResponse> {
     Json(PrivateResponse {
