--- a/templates/tutorials/send-your-logs-to-datadog.mdx
+++ b/templates/tutorials/send-your-logs-to-datadog.mdx
@@ -2,7 +2,7 @@
 title: 'Using Shuttle with Datadog'
 ---
 
-> written by [Roberto Huertas](https://robertohuertas.com/) 
+> written by [Roberto Huertas](https://robertohuertas.com/)
 
 ## Some words about observability
 
@@ -32,7 +32,7 @@ This is great for simple applications, but what if you want to send your logs to
 
 > As a disclaimer, I must say that I'm currently working at [Datadog](https://datadoghq.com), so I'm a bit biased, but I'm also a huge fan of the product and I think it's a great tool for developers 😅.
 
-Most of the time, the easiest way to send anything to the [Datadog platform](https://www.datadoghq.com/observability-platform/) is by using the [Datadog Agent](https://docs.datadoghq.com/agent/), but in this case, as **we cannot install it** in any way, we will use a **small library I created for the occasion** called [dd-tracing-layer](https://crates.io/crates/dd-tracing-layer), which happens to be using the [Datadog HTTP API](https://docs.datadoghq.com/api/latest/logs/) under the hood to send logs to the  [Datadog platform](https://www.datadoghq.com/observability-platform/).
+Most of the time, the easiest way to send anything to the [Datadog platform](https://www.datadoghq.com/observability-platform/) is by using the [Datadog Agent](https://docs.datadoghq.com/agent/), but in this case, as **we cannot install it** in any way, we will use a **small library I created for the occasion** called [dd-tracing-layer](https://docs.rs/dd-tracing-layer/latest/dd_tracing_layer/), which happens to be using the [Datadog HTTP API](https://docs.datadoghq.com/api/latest/logs/) under the hood to send logs to the  [Datadog platform](https://www.datadoghq.com/observability-platform/).
 
 ## How to use tracing with Shuttle
 
@@ -45,7 +45,7 @@ If we check the [Shuttle documentation](https://docs.shuttle.dev/configuration/l
 use tracing::info;
 
 #[shuttle_runtime::main]
-async fn axum(#[shuttle_shared_db::Postgres] pool: PgPool) -> ShuttleAxum { 
+async fn axum(#[shuttle_shared_db::Postgres] pool: PgPool) -> ShuttleAxum {
     info!("Running database migration");
     pool.execute(include_str!("../schema.sql"))
         .await
@@ -85,7 +85,7 @@ As a walkthrough, we are going to create a new [Shuttle](https://www.shuttle.dev
 
 The idea is to build a simple REST API using [Axum](https://docs.rs/axum/latest/axum/) and send our logs to [Datadog](https://datadoghq.com) using the [dd-tracing-layer](https://crates.io/crates/dd-tracing-layer) crate.
 
-Although I'm going to describe all the steps you need to take to make this work, you can see the **final state of the project** in this [GitHub repository](https://github.com/robertohuertasm/shuttle-datadog-logs). 
+Although I'm going to describe all the steps you need to take to make this work, you can see the **final state of the project** in this [GitHub repository](https://github.com/robertohuertasm/shuttle-datadog-logs).
 
 Feel free to use it as a reference.
 
