--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -1,5 +1,6 @@
 ---
 title: "JWT Authentication"
+'og:title': "JWT Authentication with Axum"
 description: "Learn how you can secure your Axum web application by using JWT tokens."
 ---
 
@@ -230,7 +231,7 @@ tracing-subscriber = "0.3.17"
 ## Usage
 
 Once you've cloned this example, launch it locally by using `shuttle run`. Once you've verified that it's up, you'll now be able to go to `http://localhost:8000` and start trying the example out!
- 
+
 First, we should be able to access the public endpoint without any authentication using:
 
 ```sh
