--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -1,5 +1,6 @@
 ---
 title: "JWT Authentication"
+'og:title': "JWT Authentication with Rocket"
 description: "Learn how you can secure your Rocket web application by using JWT tokens."
 ---
 
