--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Static Files"
+'og:title': "Static Files with Actix Web - Shuttle Docs"
 description: "This article walks you through setting up static files with Actix Web, a powerful Rust framework for battle-hardened web applications."
 ---
 
@@ -74,7 +75,7 @@ assets = [
 
 ## Usage
 
-After you clone the example, launch it locally by using `shuttle run` then visit the home route at `http://localhost:8000` - you should see a homepage that shows our included HTML file. 
+After you clone the example, launch it locally by using `shuttle run` then visit the home route at `http://localhost:8000` - you should see a homepage that shows our included HTML file.
 
 You can extend this example by adding more routes that serve other files.
 
