--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hello World"
+'og:title': "Hello World with Actix Web - Shuttle Docs"
 description:
   "Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust."
 ---
@@ -13,7 +14,7 @@ This section revolves around simple Actix examples you can get quickly started w
 
 You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 ```bash
-shuttle init --template actix-web 
+shuttle init --template actix-web
 ```
 
 <CodeGroup>
