--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Static Files"
+'og:title': "Static Files with Axum - Shuttle Docs"
 description: "This article walks you through setting up static files with Axum, a powerful Rust framework maintained by the Tokio-rs team."
 ---
 
@@ -73,7 +74,7 @@ assets = [
 
 ## Usage
 
-After you clone the example, launch it locally by using `shuttle run` then visit the home route at `http://localhost:8000` - you should see a homepage that shows our included HTML file. 
+After you clone the example, launch it locally by using `shuttle run` then visit the home route at `http://localhost:8000` - you should see a homepage that shows our included HTML file.
 
 You can extend this example by adding more routes that serve other files.
 
