--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hello World"
+'og:title': "Hello World with Axum - Shuttle Docs"
 description:
   "Axum is a web application framework that focuses on ergonomics and
   modularity."
