--- a/examples/overview.mdx
+++ b/examples/overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Overview"
+'og:title': "Shuttle Examples - Overview"
 ---
 
 This section of the docs allows you to browse the various starter examples available on the [shuttle-examples](https://github.com/shuttle-hq/shuttle-examples#readme).
