--- a/examples/rocket-jwt-authentication.mdx
+++ b/examples/rocket-jwt-authentication.mdx
@@ -1,6 +1,6 @@
 ---
 title: "JWT Authentication"
-'og:title': "JWT Authentication with Rocket"
+'og:title': "JWT Authentication with Rocket - Shuttle Docs"
 description: "Learn how you can secure your Rocket web application by using JWT tokens."
 ---
 
