--- a/examples/rocket-postgres.mdx
+++ b/examples/rocket-postgres.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Postgres Todo App"
+'og:title': "Postgres Todo App with Rocket - Shuttle Docs"
 description: "This article walks you through how you can easily set up a simple to-do app using Rocket and SQLx with PostgresQL."
 ---
 
