--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hello World"
+'og:title': "Hello World with Rocket - Shuttle Docs"
 description:
   "Rocket is an async web framework for Rust with a focus on usability,
   security, extensibility, and speed."
