--- a/migrations/resources/secrets.mdx
+++ b/migrations/resources/secrets.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Secrets"
+'og:title': "Migrating your secrets to Shuttle - Shuttle Docs"
 description: "How to migrate a web service that uses environment variables or secrets to Shuttle"
 ---
 
