--- a/templates/overview.mdx
+++ b/templates/overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Overview"
+'og:title': "Shuttle Templates - Overview"
 ---
 
 This section of the docs is a hub for exploring Shuttle's Examples, Templates, and Tutorials.
@@ -10,4 +11,3 @@ Here are some relevant links to help you find what you're looking for:
 - [Shuttle Community Templates](https://github.com/shuttle-hq/shuttle-examples#community-examples) - a list of more templates made by the community.
 - [Awesome Shuttle](https://github.com/shuttle-hq/awesome-shuttle#readme) - A list of awesome projects built on Shuttle.
 - [Shuttlings](https://github.com/shuttle-hq/shuttlings) - A collection of code challenges that also happens to be a good tutorial for backend development on Shuttle.
-
