--- a/examples/axum-postgres.mdx
+++ b/examples/axum-postgres.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Postgres Todo App"
+'og:title': "Postgres Todo App with Axum - Shuttle Docs"
 description: "This article walks you through how you can easily set up a simple to-do app using Axum and SQLx with PostgresQL."
 ---
 
