--- a/community/contribute.mdx
+++ b/community/contribute.mdx
@@ -1,6 +1,6 @@
 ---
 title: Contributing
-description: "This document describes the best way to get started with contributing to Shuttle"
+description: "Learn about the best way to get started with contributing to Shuttle."
 icon: "code-pull-request"
 ---
 
