--- a/community/get-involved.mdx
+++ b/community/get-involved.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Get Involved"
+description: "Learn how to get involved with Shuttle."
 icon: "hand-holding-hand"
 ---
 
@@ -25,7 +26,7 @@ If you are wondering what the best way is to get involved, here's how:
   <Card
     title="Follow us on Twitter"
     icon="twitter"
-    href="https://twitter.com/shuttle_dev"
+    href="https://x.com/shuttle_dev"
     color="#1DA1F2"
   >
     Go to @shuttle_dev on Twitter
