--- a/examples/serenity-todo.mdx
+++ b/examples/serenity-todo.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Todo List Bot"
+description: "Learn how to write a Serenity bot that can manage a to-do list."
 ---
 
 ### Prerequisites
