--- a/integrations/shuttle-opendal.mdx
+++ b/integrations/shuttle-opendal.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Apache OpenDAL"
+description: "Learn about Shuttle's OpenDAL resource annotation."
 icon: "database"
 ---
 This plugin allows services to connect to [Apache OpenDAL™](https://github.com/apache/opendal). OpenDAL is a data access layer that allows users to easily and efficiently retrieve data from various storage services in a unified way.
