--- a/integrations/shuttle-turso.mdx
+++ b/integrations/shuttle-turso.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Turso"
+description: "Learn about how to use Shuttle with Turso, a distributed SQLite cloud service."
 icon: "database"
 ---
 
