--- a/introduction/docs.mdx
+++ b/introduction/docs.mdx
@@ -84,7 +84,7 @@ icon: "hand-wave"
     title="Follow us on Twitter"
     icon="twitter"
     color="#1DA1F2"
-    href="https://twitter.com/shuttle_dev"
+    href="https://x.com/shuttle_dev"
   >
     Go to @shuttle_dev on Twitter
   </Card>
