--- a/resources/resources.mdx
+++ b/resources/resources.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Resources"
+description: "Learn about the resources that are officially supported by Shuttle."
 icon: "boxes-stacked"
 ---
 
