--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Frequently Asked Questions"
+description: "Learn about the most frequently asked questions from Shuttle users."
 icon: "comment-question"
 ---
 
