--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Troubleshooting"
+description: "Learn about how to solve common problems you might run into while using Shuttle."
 icon: "bug"
 ---
 
