--- a/templates/fullstack/saas-template.mdx
+++ b/templates/fullstack/saas-template.mdx
@@ -1,5 +1,6 @@
 ---
 title: "SaaS Starter Template"
+description: Learn how you can deploy a fully working SaaS template using Next.js & Rust.
 ---
 
 We've created a SaaS template that you can use to get started quickly with a fullstack Rust + Next.js app.
