--- a/templates/tutorials/authentication.mdx
+++ b/templates/tutorials/authentication.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Authentication"
+description: "Learn how to implement authentication using Rust."
 ---
 
 Most websites have some kind of user system. But implementing authentication can
