--- a/templates/tutorials/discord-weather-forecast.mdx
+++ b/templates/tutorials/discord-weather-forecast.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Discord Weather Forecast Bot"
+description: "Learn how to write a Discord bot that can get the weather forecast."
 ---
 
 In this tutorial, we will look at a simple way to add custom functionality to a
@@ -14,7 +15,7 @@ The full code can be found in
 ### Registering our bot
 
 Before we start making our bot, we need to register it for Discord. We do that
-by going to https://discord.com/developers/applications and creating a new
+by going to [the Discord Developers applications page](https://discord.com/developers/applications) and creating a new
 application.
 
 ![](/images/discord-weather-forecast-1.png)
@@ -60,9 +61,9 @@ Oh, they're offline 😢
 At this moment, our bot is not running because there is no code. We will have to
 write it and run it before we can start interacting with it.
 
-### [Serenity](https://docs.rs/serenity/latest/serenity/index.html)
+### Serenity
 
-Serenity is a library for writing Discord bots (and communicating with the
+[Serenity](https://docs.rs/serenity/latest/serenity/index.html) is a library for writing Discord bots (and communicating with the
 Discord API).
 
 If you don't have Shuttle yet, you can install it with
