--- a/templates/tutorials/send-your-logs-to-datadog.mdx
+++ b/templates/tutorials/send-your-logs-to-datadog.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Using Shuttle with Datadog'
+description: "Learn how to send your logs to Datadog with Roberto."
 ---
 
 > written by [Roberto Huertas](https://robertohuertas.com/)
