--- a/templates/tutorials/serverless-calendar-app.mdx
+++ b/templates/tutorials/serverless-calendar-app.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Serverless Calendar App"
+description: "Learn how to build a serverless calendar application with Matthias."
 ---
 
 > written by [Matthias Endler](https://endler.dev/)
@@ -362,7 +363,7 @@ shuttle deploy
 Right, that's all. It's that easy. Thanks to the folks over at
 [shuttle.dev](https://github.com/shuttle-hq/shuttle) for making this possible.
 
-The calendar app is now available at https://zerocal.shuttle.app.
+The calendar app is now available at `https://zerocal.shuttle.app`.
 
 Now I can finally send my friends a link to a calendar event for our next pub
 crawl. They'll surely appreciate it.yeahyeah
