--- a/templates/tutorials/url-shortener.mdx
+++ b/templates/tutorials/url-shortener.mdx
@@ -1,5 +1,6 @@
 ---
 title: "URL Shortener"
+description: "Learn how to write a URL shortener with Terrence."
 ---
 
 I was trying to get to sleep on a Wednesday night - I check my phone, it's 2:54
