--- a/templates/tutorials/websocket-chat-app-js.mdx
+++ b/templates/tutorials/websocket-chat-app-js.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Chat app with React & Rust"
+description: "Learn how to write a Rust chat application with React on the frontend."
 ---
 
 Source code can be found [here](https://github.com/joshua-mo-143/react-websocket-chat-rust).
