--- a/examples/other.mdx
+++ b/examples/other.mdx
@@ -1,4 +1,8 @@
-This section contains examples for the following frameworks: Tower, Warp, Salvo, Poem, Thruster, and Tide.
+---
+title: "Other Examples"
+description: "This section contains examples for the following frameworks: Tower, Warp, Salvo, Poem, Thruster, and Tide."
+icon: "github"
+---
 
 ### Hello World
 
