--- a/integrations/custom-resources.mdx
+++ b/integrations/custom-resources.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Custom Resources"
+description: "This example shows how you can make a custom Shuttle resource annotation."
 icon: "toolbox"
 ---
 
