--- a/platform-update/platform-update.mdx
+++ b/platform-update/platform-update.mdx
@@ -17,14 +17,14 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
 
 ### Access the NEW platform
 
-- New Console: [console.shuttle.dev](http://console.shuttle.dev)
-- New Docs: [docs.shuttle.dev](http://docs.shuttle.dev)
+- New Console: [console.shuttle.dev](https://console.shuttle.dev)
+- New Docs: [docs.shuttle.dev](https://docs.shuttle.dev)
 - Command Line: new `shuttle` command (installed alongside `cargo shuttle`)
 
 ### Access the OLD platform (for existing users)
 
-- Old Console: [console.shuttle.rs](http://console.shuttle.rs)
-- Old Docs: [docs.shuttle.rs](http://docs.shuttle.rs)
+- Old Console: [console.shuttle.rs](https://console.shuttle.rs)
+- Old Docs: [docs.shuttle.rs](https://docs.shuttle.rs)
 - Command Line: `cargo shuttle` (unchanged)
 
 ## Changelog
