--- a/templates/overview.mdx
+++ b/templates/overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Overview"
+description: "Learn more about the official Shuttle templates."
 'og:title': "Shuttle Templates - Overview"
 ---
 
