--- a/templates/tutorials/rest-http-service-with-axum.mdx
+++ b/templates/tutorials/rest-http-service-with-axum.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Writing a Rest HTTP Service with Axum"
+description: "Learn how to write a REST HTTP service with Axum."
 ---
 
 In this guide you'll learn the basics of how to write a competent Axum HTTP REST service - first starting off with basic routing and writing functions to act as our endpoints, adding app State and middleware functions, using cookies and CORS, then finally looking at testing our app.
@@ -86,7 +87,7 @@ Now if we plug this into a router that has this function using a GET request at 
 Hello world 32!
 ```
 
-Now that we know the basics of writing endpoint functions, we can use them to write a router that has a few endpoints and can take multiple request methods at an endpoint that uses dynamic routing. 
+Now that we know the basics of writing endpoint functions, we can use them to write a router that has a few endpoints and can take multiple request methods at an endpoint that uses dynamic routing.
 
 ```rust
 async fn router() -> Router {
@@ -158,9 +159,9 @@ impl FromRef<AppState> for ApiState {
 
 ### Static Files
 
-Let's say you want to serve some static files using Axum - or that you have an application made using a frontend JavaScript framework like React, and you want to combine it with your Axum backend to make one large application instead of having to host your frontend and backend separately. How would you do that? 
+Let's say you want to serve some static files using Axum - or that you have an application made using a frontend JavaScript framework like React, and you want to combine it with your Axum backend to make one large application instead of having to host your frontend and backend separately. How would you do that?
 
-Axum does not by itself have capabilities to be able to do this; however, what it does have is super-strong compatibility with `tower-http`, which offers utility for serving your own static files whether you're running a SPA, statically-generated files from a framework like Next.js or simply just raw HTML, CSS and JavaScript. 
+Axum does not by itself have capabilities to be able to do this; however, what it does have is super-strong compatibility with `tower-http`, which offers utility for serving your own static files whether you're running a SPA, statically-generated files from a framework like Next.js or simply just raw HTML, CSS and JavaScript.
 
 If you're using static-generated files, you can easily slip this into your router (assuming your static files are in a 'dist' folder at the root of your project):
 
@@ -213,7 +214,7 @@ struct AppState {
     key: Key,
 }
 
-// this impl tells `SignedCookieJar` and `PrivateCookieJar how to access the 
+// this impl tells `SignedCookieJar` and `PrivateCookieJar how to access the
 // key from our state
 impl FromRef<AppState> for Key {
     fn from_ref(state: &AppState) -> Self {
@@ -224,7 +225,7 @@ impl FromRef<AppState> for Key {
 #[shuttle_runtime::main]
 async fn axum() -> shuttle_axum::ShuttleAxum {
     let state = AppState {
-        key: Key::generate() 
+        key: Key::generate()
     };
 
     // ... the rest of your code
@@ -276,7 +277,7 @@ async fn logout(
 
 ### Middleware
 
-Middleware is essentially a function that runs before the client hits an endpoint; it can be used for things like adding a wait time to prevent server overload, to validating user sessions from cookies. Fortunately, middleware in Axum is quite simple to use! 
+Middleware is essentially a function that runs before the client hits an endpoint; it can be used for things like adding a wait time to prevent server overload, to validating user sessions from cookies. Fortunately, middleware in Axum is quite simple to use!
 
 There's two ways to be able to create middleware in Axum, but we will be focusing on the more simple way which is to just write a function that uses Axum's middleware utilities as parameters, then simply just adding it to our router and declaring it as middleware. We can also add middleware that uses state this way too, which is great as it means we can share a database connection pool (for example) in the middleware:
 
