--- a/platform-update/platform-update.mdx
+++ b/platform-update/platform-update.mdx
@@ -76,7 +76,7 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
   - `project stop`
   - `project restart`
   - `clean`
-- The **Teams** feature has been temporarily disabled. We plan to enable it after improvements have been made. {/* *(The implementation of teams was very inefficient, and slowed down everyone's experience of using the Shuttle API.)* */}
+- The **Teams** feature has been temporarily disabled. We plan to enable it after improvements have been made.
 
 {/* ## Upcoming features
 
@@ -86,7 +86,6 @@ Not all planned features are implemented yet. Here is a list of planned changes:
 - Feature parity between CLI and Shuttle Console
 - Project idling or other way to reduce compute costs
 - Customising CPU and RAM for the builder and runtime containers
-- Update the Shuttle Deploy GitHub Action
 - Deploying prebuilt shuttle-examples docker images (allows one-click deploys)
 - Streaming logs with `shuttle logs --follow` and during a `deploy` command
-- New resources, such as S3 bucket and a replacement for Shuttle Persist and Shuttle AWS RDS */}
+- New resources, such as S3 bucket */}
