--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -27,15 +27,17 @@ You can also specify other return types to get rid of common boilerplate.
 
 Depending on which type declaration is used as the output type in the macro, additional feature flags need to be activated:
 
-| Engine   | Feature flag | Type declaration | Description |
-|----------|--------------|------------------|-------------|
-| Postgres | | `String` | The connection string including username and password |
-| Postgres | `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::PgPool` | An sqlx connection pool with reasonable defaults |
-| Postgres | `diesel-async` | `diesel_async::AsyncPgConnection` | An async diesel connection with reasonable defaults |
-| Postgres | `diesel-async-bb8` | `diesel_bb8::Pool<diesel_async::AsyncPgConnection>` | A bb8 connection pool with reasonable defaults |
-| Postgres | `diesel-async-deadpool` | `diesel_deadpool::Pool<diesel_async::AsyncPgConnection>` | A deadpool connection pool with reasonable defaults |
-| Postgres | `opendal-postgres` | `opendal::Operator` | An OpenDAL Operator key-value storage interface |
-| Postgres | `opendal-postgres` | `shuttle_shared_db::SerdeJsonOperator` | A wrapper over Operator with interface for serde types |
+**Postgres output types:**
+
+| Feature flag | Type declaration | Description |
+|--------------|------------------|-------------|
+| | `String` | The connection string including username and password ([example](https://github.com/shuttle-hq/shuttle-examples/tree/main/shuttle-cron)) |
+| `sqlx` (with rustls) or `sqlx-native-tls` | `sqlx::PgPool` | An sqlx connection pool ([example](https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/postgres)) |
+| `diesel-async` | `diesel_async::AsyncPgConnection` | An async diesel connection |
+| `diesel-async-bb8` | `diesel_bb8::Pool<diesel_async::AsyncPgConnection>` | A bb8 connection pool |
+| `diesel-async-deadpool` | `diesel_deadpool::Pool<diesel_async::AsyncPgConnection>` | A deadpool connection pool |
+| `opendal-postgres` | `opendal::Operator` | An OpenDAL Operator key-value storage interface |
+| `opendal-postgres` | `shuttle_shared_db::SerdeJsonOperator` | A wrapper over Operator with interface for serde types ([example](https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/url-shortener)) |
 
 Lastly, add a macro annotation to the Shuttle main function. Here are examples for Postgres:
 
