--- a/platform-update/platform-update.mdx
+++ b/platform-update/platform-update.mdx
@@ -7,11 +7,13 @@ Introducing the new Shuttle platform! We've supercharged what developers love ab
 
 [*Read the full announcement here!*](https://www.shuttle.dev/blog/2024/10/10/shuttle-redefining-backend-development)
 
-{/* ## Q&A
+## Important Dates
 
-- When is the old platform shutting down?
-- Do I have to migrate my project?
-- etc */}
+- January 2nd, 2025: Deployment freeze on legacy platform
+- January 14th, 2025: Legacy platform shutdown begins (gradual shutdown and removal of all projects)
+- January 31st, 2025: Complete decommissioning of legacy platform infrastructure
+
+Migrate to the new platform for continued deployment capabilities. Check out our [migration docs](/platform-update/migration).
 
 ## Domain and CLI changes
 
