mentions account providers

--- a/platform-update/platform-update.mdx
+++ b/platform-update/platform-update.mdx
@@ -68,6 +68,7 @@ Migrate to the new platform for continued deployment capabilities. Check out our
   - `deploy --no-follow` to not poll the deployment status until it reaches a running or failed state.
   - `account` to show information about your account.
   - `project update name` to rename a project.
+- You can now create accounts with Google sign-in and email + password. Accounts on new providers with matching emails are not linked and are treated as separate accounts.
 
 ### Removed
 
