--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -107,3 +107,4 @@ Example configuration for Zsh on Linux: add `eval "$(shuttle generate shell zsh)
 
 - `shuttle <command> --debug`: Turn on tracing output for Shuttle libraries. (WARNING: can print sensitive data)
 - `shuttle deploy --output-archive <path>`: Dump the deployment archive to disk instead of deploying it. Useful for debugging.
+- `shuttle logout --reset-api-key`: Log out and reset your account's API key.
