mention sqlx prepare

--- a/_snippets/sqlx-macros.mdx
+++ b/_snippets/sqlx-macros.mdx
@@ -1,1 +1,1 @@
-<Warning>Shuttle deployments do not currently support `sqlx` compile-time checked macros.</Warning>
+<Warning>The Shuttle builder does not currently support `sqlx` compile-time checked macros. Use [`cargo sqlx prepare`](https://github.com/launchbadge/sqlx/tree/main/sqlx-cli#enable-building-in-offline-mode-with-query) to enable offline building.</Warning>
